@@ -80,6 +80,7 @@ Version 2.3.0 - The river knows.
 		* Don't kick friend upload, don't kick release prio uploads (unless they take more
 		  than half of the slots), and don't kick anybody else unless necessary (with GonoszTopi)
 		* Fixed HTTP download if server transmits no content-length
+		* Fixed crash in remote gui when aMule exits
 
 	Vollstrecker:
 		* Unify copyright lines
